Moved backstage link

--- a/app/views/application/_main_footer.html.erb
+++ b/app/views/application/_main_footer.html.erb
@@ -21,7 +21,10 @@
                     <% if Plendit::Application.config.x.footer.show_facebook_buttons %>
                         <li class="about-footer__list-item"><%= render partial: 'misc/facebook' %></li>
                     <% else %>
-                        <li>Kommer snart!</li>
+                        <li class="about-footer__list-item">Kommer snart!</li>
+                    <% end %>
+                    <% if !current_user.nil? && current_user.is_site_admin? %>
+                        <li class="about-footer__list-item"><%= link_to 'Backstage!', backstage_path %></li>
                     <% end %>
                 </ul>
             </div>
