No border on huge avatar

--- a/app/assets/stylesheets/_avatars.scss
+++ b/app/assets/stylesheets/_avatars.scss
@@ -16,6 +16,7 @@ $avatar-tiny-size: 33px;
 
 .avatar--huge {
     @extend .avatar;
+    border: 0;
     width: $avatar-huge-size;
     height: $avatar-huge-size;
 }
