--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -4,13 +4,13 @@ $top-bar-height: 52px;
 
 .top-bar {
     background-color: $color-plendit-blue;
-    height: $top-bar-height;
+    min-height: $top-bar-height;
     padding: 10px 12px 0 12px;
     color: white;
     position: relative;
 
     @media (max-width: $mobile) {
-        height: $top-bar-height * 2;
+        xxheight: $top-bar-height * 2;
     }
 
     &__form {
@@ -87,7 +87,7 @@ $top-bar-height: 52px;
         float: right;
 
         @media (max-width: $mobile) {
-            float: none;
+            xxfloat: none;
         }
     }
 
@@ -99,7 +99,7 @@ $top-bar-height: 52px;
     &__avatar {
         vertical-align: middle;
         margin-bottom: 5px;
-        margin-right: $standard-spacing / 2;
+        margin-left: $standard-spacing / 2;
     }
 
     &__notification-count {
