--- a/app/views/feedbacks/_feedback_form.html.erb
+++ b/app/views/feedbacks/_feedback_form.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class="feedback-box__feedback">
         <label class="feedback-box__star-label">Stjerner:</label>
-        <%= render('shared/stars.html', rating: 4, small: true ) %>
+        <%= render('shared/stars.html', rating: 4, size: :small ) %>
 
         <label class="u-full-width">Tilbakemelding:</label>
         <textarea class="u-full-width"></textarea>
