--- a/app/views/shared/_stars.html.erb
+++ b/app/views/shared/_stars.html.erb
@@ -1,13 +1,18 @@
 <span class="rating-stars">
 <%
-    if defined? small and small
-      class_name = "rating-stars__star--small"
-      size = "14x14"
-    else
-      class_name = "rating-stars__star"
-      size = "22x22"
-    end
+    size = :normal unless defined? size
 
+    case size
+    when :normal
+      class_name = "rating-stars__star"
+      img_size = "22x22"
+    when :small
+      class_name = "rating-stars__star--small"
+      img_size = "14x14"
+    when :tiny
+      class_name = "rating-stars__star--tiny"
+      img_size = "12x12"
+    end
 
     if rating > 5 or rating < 0
       puts "out of bounds"
@@ -21,15 +26,15 @@
     empty_stars = ( 5 - ( full_stars + part_stars ) )
 
     full_stars.times do %>
-      <%= image_tag("star_full.svg", size: size, alt: "", class: class_name) %> <%
+      <%= image_tag("star_full.svg", size: img_size, alt: "", class: class_name) %> <%
     end
 
     if part_stars == 1 %>
-      <%= image_tag("star_half.svg", size: size, alt: "", class: class_name) %> <%
+      <%= image_tag("star_half.svg", size: img_size, alt: "", class: class_name) %> <%
     end
 
     empty_stars.times do %>
-      <%= image_tag("star_empty.svg", size: size, alt: "", class: class_name ) %> <%
+      <%= image_tag("star_empty.svg", size: img_size, alt: "", class: class_name ) %> <%
     end
 %> <% if defined? num_ratings %> (<%= num_ratings %>) <% end %>
 </span>
