--- a/app/assets/stylesheets/_notification_box.scss
+++ b/app/assets/stylesheets/_notification_box.scss
@@ -15,7 +15,7 @@
         text-decoration: none;
         color: black;
         border-bottom: solid thin $color-gray-background;
-
+        background-color: white;
 
         &--read {
              background-color: $color-subtle-gray-background;
