Result item styling

--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -111,7 +111,7 @@
     }
 
     &__hits-list {
-        padding-left: $standard-spacing;
+        padding-left: 18px;
     }
 
     @media (min-width: $bigscreen) {
