--- a/app/assets/stylesheets/_search_result_item.scss
+++ b/app/assets/stylesheets/_search_result_item.scss
@@ -4,7 +4,7 @@
     position: relative;
 
     &__padder {
-        padding: 0 $standard-spacing $standard-spacing 0;
+        padding: 0 18px 18px 0;
     }
 
     @media (min-width: $desktop) {
@@ -22,7 +22,7 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
-        width: 74%;
+        width: 70%;
     }
 
     &__link {
@@ -31,6 +31,7 @@
         color: black;
         display: inline-block;
         width: 100%;
+        box-shadow: $subtle-shadow;
     }
 
     &__image-holder {
@@ -47,10 +48,10 @@
         position: absolute;
         text-align: center;
         top: 12px;
-        right: 7px;
+        right: 18px;
         min-width: 100px;
         height: 46px;
-        box-shadow: $subtle-shadow;
+        box-shadow: -2 2px 2px rgba(0, 0, 0, 0.4);
         color: white;
         background-color: $color-plendit-blue;
         font-size: 16px;
@@ -63,8 +64,9 @@
     &__profile {
         position: absolute;
         width: 100px;
-        bottom: 20px;
-        right: 8px;
+        bottom: 30px;
+        right: 12px;
         text-align: center;
+        line-height: 16px;
     }
 }
