--- a/app/assets/stylesheets/_search_result_item.scss
+++ b/app/assets/stylesheets/_search_result_item.scss
@@ -51,7 +51,7 @@
         right: 18px;
         min-width: 100px;
         height: 46px;
-        box-shadow: -2 2px 2px rgba(0, 0, 0, 0.4);
+        box-shadow: -2px 2px 2px rgba(0, 0, 0, 0.4);
         color: white;
         background-color: $color-plendit-blue;
         font-size: 16px;
