Removed expensive avatar lookup, added helper for getting avatar for url

--- a/app/views/shared/_search_result_link.html.erb
+++ b/app/views/shared/_search_result_link.html.erb
@@ -8,7 +8,7 @@
 
     <div class="search-result-link__profile">
         <div>
-            <%= avatar_image User.find(ad.user.id), :small %>
+            <%= avatar_image_from_url ad.user.avatar_url, :small %>
             <br>
             <%= render('shared/stars.html', rating: ad.user.rating, size: :tiny ) %>
         </div>
