--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -41,7 +41,7 @@
 <div class="container u-push-down-only">
     <div class="if-branding-section">
         <div class="if-branding-section__centerer">
-            <%= image_tag 'logos/if_150x148.png', size: '60x59', alt: '', class: 'u-pull-left if-branding-section__logo' %>
+            <%= image_tag 'logos/if_150x148.png', size: '60x59', alt: '' %>
             <h2>Skadeforsikring fra IF</h2>
             <p>
                 Slipp alle bekymringer. Alt du leier ut på Plendit blir
