Added 6 most recent ads on frontpage. No way to explicitly choose yet

--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -133,3 +133,21 @@
         text-align: center;
     }
 }
+
+.latest-ads {
+    text-align: center;
+
+    &__holder {
+        padding: 4px;
+        width: 30%;
+        display: inline-block;
+
+        @media (max-width: $desktop) {
+            width: 46%;
+        }
+
+        @media (max-width: 670px) {
+            width: 100%;
+        }
+    }
+}
