--- a/app/assets/stylesheets/_notification_box.scss
+++ b/app/assets/stylesheets/_notification_box.scss
@@ -4,7 +4,6 @@
     background-color: white;
     box-shadow: $subtle-shadow;
     padding-top: $standard-spacing / 2;
-    padding-bottom: $standard-spacing / 2;
 
     &__item {
         padding-top: $standard-spacing / 2;
@@ -17,8 +16,12 @@
         border-bottom: solid thin $color-gray-background;
         background-color: white;
 
-        &--read {
+        &--unread {
              background-color: $color-subtle-gray-background;
+        }
+
+        &:last-of-type {
+            border-bottom: none;
         }
     }
 
@@ -43,7 +46,6 @@
         width: 400px;
         background-color: white;
         border: solid thin $color-gray-background;
-        border-radius: 4px;
 
         &__up-triangle {
             display: block;
