Change from IF to If, requested by insurance provider.

--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -42,10 +42,10 @@
     <div class="if-branding-section">
         <div class="if-branding-section__centerer">
             <%= image_tag 'logos/if_150x148.png', size: '60x59', alt: '' %>
-            <h2>Skadeforsikring fra IF</h2>
+            <h2>Skadeforsikring fra If</h2>
             <p>
                 Slipp alle bekymringer. Alt du leier ut på Plendit blir
-                forsikret av IF. Ved skade har du som utleier ingen
+                forsikret av If. Ved skade har du som utleier ingen
                 egenandel eller bonustap.
                 <strong>
                     <%= link_to 'Les mer om forsikring', Rails.configuration.x.customerservice.insurance_info, target: '_blank' %>.
