--- a/app/views/user_payment_cards/_list.html.erb
+++ b/app/views/user_payment_cards/_list.html.erb
@@ -1,5 +1,5 @@
 
-<%= render layout: "gray_box", locals: {title: "Dine Betalingskort", id: "betalingskort"} do %>
+<%= render layout: "gray_box", locals: {title: "Dine betalingskort", id: "betalingskort"} do %>
 
   <%- if payment_card_notice -%>
     <div><%= payment_card_notice %> </div>
