--- a/app/views/users/_show_user_payment_account.html.erb
+++ b/app/views/users/_show_user_payment_account.html.erb
@@ -28,7 +28,7 @@
     <p>
         <small>Når profilen din er komplett, og vi har bekreftet epost og mobiltelefon, kan du legge inn kontonummer.</small>
     </p>
-    Før du kan registrere kontonummer, vi trenger:
+    Før du kan legge inn ditt kontonummer, trenger vi:
     <ul>
       <li>bekreftet epost</li>
       <li>bekreftet mobiltelefon</li>
