--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -27,7 +27,7 @@
             </a>
 
             <%= link_to users_path, :class => "top-bar__navbar-link" do %>
-                <span class="top-bar__navbar-section">Min side</span>
+                <span class="top-bar__navbar-section top-bar__me-label"></span>
                 <%= avatar_image current_user, :tiny, class: 'top-bar__avatar' %>
             <% end %>
 
