Change IF to If - about us page

--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -8,7 +8,7 @@
 <p>
     Det er gratis å legge ut annonser, alle brukere blir verifisert og
     betaling utføres trygt gjennom tjenesten. Plendit gir utleier en ekstra
-    sikkerhet ved å tilby skadeforsikring fra IF. For å sikre en
+    sikkerhet ved å tilby skadeforsikring fra If. For å sikre en
     god brukeropplevelse gir både utleier og leietaker hverandre en rating
     av leieforholdet.  
 </p>
