--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -63,6 +63,7 @@
                 <%= render partial: "shared/search_result_link", locals: { ad: ad } %>
             </div>
         <% end %>
+        <%= button_to 'Se alle annonsene', search_path, method: :get, form_class: 'u-inline', class: 'button button-primary u-push-down-only' %>
     </div>
 </div>
 
