--- a/app/views/shared/_personal_bar.html.erb
+++ b/app/views/shared/_personal_bar.html.erb
@@ -25,10 +25,7 @@
 
                 <% links.each do |link| %>
                     <%= link_to link[:path], class: ['personal-bar__link'] do %>
-                        <span class="personal-bar__link-icon">
-                            <%= icon link[:icon] %>
-                        </span>
-                        <%= link[:text] %>
+                        <span class="personal-bar__link-icon"><%= icon link[:icon] %></span><%= link[:text] %>
                     <% end %>
                 <% end %>
              </div>
