--- a/app/views/application/_main_footer.html.erb
+++ b/app/views/application/_main_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="about-footer">
+<footer class="about-footer <%= @page_needs_no_footer_padding ? 'about-footer--nopad' : '' %>">
     <div class="container">
         <div class="row">
             <div class="four columns">
