--- a/app/views/shared/_ad_title_box.html.erb
+++ b/app/views/shared/_ad_title_box.html.erb
@@ -1,12 +1,19 @@
 <div class="ad-title-box">
-    <div class="ad-title-box__avatar-holder">
-        <%= avatar_image ad.user, :large %>
-        <br>
-        <strong><%= link_to ad.user.display_name, user_path( ad.user.id ) %></strong>
-        <br>
-        <%= render('shared/stars.html', size: :small, rating: ad.user.calculate_average_rating ) %>
+    <h1 class="ad-title-box__title"><%= ad.display_title %></h1>
+
+
+    <div class="ad-title-box__user-box">
+
+        <div class="ad-title-box__avatar-holder">
+            <%= avatar_image ad.user, :large %>
+        </div>
+        <div class="ad-title-box__details-holder">
+
+            <strong>Leies ut av <%= link_to ad.user.display_name, user_path(ad.user) %></strong>
+            <br>
+            <%= render('shared/stars.html', size: :normal, rating: ad.user.calculate_average_rating ) %>
+        </div>
+    
     </div>
-    <div class="ad-title-box__title-holder">
-        <h1 class="ad-title-box__title"><%= ad.display_title %></h1>
-    </div>
+
 </div>
