--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -90,7 +90,7 @@ $top-bar-height: 52px;
 
     &__logo-link {
         &:hover {
-            text-decoration: none;
+            xxtext-decoration: none;
         }
     }
 
@@ -110,7 +110,7 @@ $top-bar-height: 52px;
 
     &__navbar-link {
         color: white;
-        text-decoration: none;
+        xxtext-decoration: none;
     }
 
     &__avatar {
@@ -138,7 +138,7 @@ $top-bar-height: 52px;
     &__top-section {
         margin-left: $standard-spacing;
         margin-right: $standard-spacing / 2;
-        text-decoration: none;
+        xxtext-decoration: none;
         color: white;
         position: relative;
     }
