Tuning title box look and feel

--- a/app/assets/stylesheets/_ad_title_box.scss
+++ b/app/assets/stylesheets/_ad_title_box.scss
@@ -14,10 +14,10 @@
 
     &__avatar-holder {
         flex: 0 0 auto;
-        width: 100px;
     }
 
     &__details-holder {
         flex: 1 0 auto;
+        margin-left: $standard-spacing;
     }
 }
