--- a/app/views/shared/_ad_title_box.html.erb
+++ b/app/views/shared/_ad_title_box.html.erb
@@ -5,7 +5,7 @@
     <div class="ad-title-box__user-box">
 
         <div class="ad-title-box__avatar-holder">
-            <%= avatar_image ad.user, :large %>
+            <%= avatar_image ad.user, :medium %>
         </div>
         <div class="ad-title-box__details-holder">
 
