--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -130,15 +130,18 @@ $top-bar-height: 52px;
         background-color: #e7384a;
         display: inline-block;
         position: absolute;
-        top: -9px;
-        right: -6px;
+        top: -7px;
+        right: -10px;
         text-align: center;
     }
 
+    &__notification-logo {
+        width: 18px;
+        vertical-align: sub;
+    }
+
     &__top-section {
-        margin-left: $standard-spacing;
-        margin-right: $standard-spacing / 2;
-        xxtext-decoration: none;
+        margin-right: 20px;
         color: white;
         position: relative;
     }
