fix up overview of financial transactions

--- a/app/views/financial_transactions/_financial_transaction_list.html.erb
+++ b/app/views/financial_transactions/_financial_transaction_list.html.erb
@@ -3,13 +3,14 @@
 <table>
   <thead>
     <td>Dato</td>
+    <td>Type</td>
     <td>Hvem</td>
     <td>Hva</td>
     <td>Inn/Ut</td>
     <td>Verdi</td>
   </thead>
   <tbody>
-    <%#= render @transactions %>
+    <%= render FinancialTransaction.from_user( current_user )  %>
   </tbody>
 
 </table>
